# lowcharts

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: coverage.yml  release.yml  test.yml
ci/: before_deploy
src/: app.rs  dateparser.rs  histogram.rs  lib.rs  main.rs  matchbar.rs  plot.rs  reader.rs  stats.rs  timehist.rs
src/format/: mod.rs
src/plot/: histogram.rs  matchbar.rs  mod.rs  splittimehist.rs  terms.rs  timehist.rs  xy.rs
src/read/: buckets.rs  dateparser.rs  mod.rs  splittimes.rs  times.rs
src/stats/: mod.rs
tests/: integration_tests.rs
