[package]
name = "lowcharts"
version = "0.3.2"
authors = ["JuanLeon Lahoz <juanleon.lahoz@gmail.com>"]
edition = "2018"
description = "Tool to draw low-resolution graphs in terminal"

[dependencies]
clap = "3.0.0-beta.2"
yansi = "0.5.0"
isatty = "0.1"
derive_builder = "0.10.0"
regex = "1.4.5"
chrono = "0.4"
simplelog = "^0.10.0"
log = "*"

[dev-dependencies]
float_eq = "0.5.0"
tempfile = "3"
assert_cmd = "1.0.3"
predicates = "1.0.8"
