[package]
name = "lowcharts"
version = "0.3.2"
authors = ["JuanLeon Lahoz <juanleon.lahoz@gmail.com>"]
edition = "2018"
description = "Tool to draw low-resolution graphs in terminal"
documentation = "https://github.com/juan-leon/lowcharts/"
homepage = "https://github.com/juan-leon/lowcharts/"
repository = "https://github.com/juan-leon/lowcharts/"
readme = "README.md"
keywords = ["regex", "grep", "data", "troubleshooting", "graph", "text", "console"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"

[dependencies]
clap = "3.0.0-beta.2"
yansi = "0.5.0"
atty = "0.2"
derive_builder = "0.10.0"
regex = "1.4.5"
chrono = "0.4"
humantime = "2.1.0"
simplelog = "^0.10.0"
log = "^0"

[dev-dependencies]
float_eq = "^0"
tempfile = "3"
assert_cmd = "1.0.3"
predicates = "1.0.8"
