[package]
name = "lowcharts"
version = "0.5.7"
authors = ["JuanLeon Lahoz <juanleon.lahoz@gmail.com>"]
edition = "2018"
description = "Tool to draw low-resolution graphs in terminal"
documentation = "https://github.com/juan-leon/lowcharts/"
homepage = "https://github.com/juan-leon/lowcharts/"
repository = "https://github.com/juan-leon/lowcharts/"
readme = "README.md"
keywords = ["grep", "troubleshooting", "graph", "text", "console"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"

[lib]
  name = "lowcharts"
  path = "src/lib.rs"

[[bin]]
  name = "lowcharts"
  path = "src/main.rs"


[dependencies]
clap = { version = "^3", features = ["cargo"] }
yansi = "^0"
atty = "^0"
derive_builder = "^0"
regex = "^1.5"
chrono = "0.4"
humantime = "^2"
simplelog = "^0"
log = "^0"

[dev-dependencies]
float_eq = "^0"
tempfile = "3"
assert_cmd = "^2"
predicates = "^2"
